--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,14 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           }
         },
@@ -69,6 +77,9 @@
           "configurations": {
             "production": {
               "browserTarget": "stackoverflow:build:production"
+            },
+            "mock": {
+              "browserTarget": "stackoverflow:build:mock"
             }
           }
         },
