--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "mock": "ng serve -c mock",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
