--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=addjsonwebtokensecretherelikeQuiscustodietipsoscustodes
-MONGO_LOCAL_CONN_URL=mongodb://127.0.0.1:27017/stackoverflow
+MONGO_LOCAL_CONN_URL=mongodb://mongo:27017/stackoverflow
 MONGO_DB_NAME=stackoverflow
