--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.4",
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.4.18"
+    "bcrypt": "3.0.6",
+    "body-parser": "1.18.3",
+    "dotenv": "6.2.0",
+    "express": "4.16.4",
+    "jsonwebtoken": "8.5.0",
+    "mongoose": "5.4.18"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
