--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,8 @@
   "devDependencies": {
     "cross-env": "^5.2.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.10.2",
+    "typescript": "3.9.7"
   }
 }
