--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.7",
     "bcrypt": "3.0.6",
     "body-parser": "1.18.3",
     "dotenv": "6.2.0",
