--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/morgan": "^1.9.1",
     "bcrypt": "3.0.6",
     "body-parser": "1.18.3",
     "dotenv": "6.2.0",
