--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/morgan": "^1.9.1",
     "bcrypt": "3.0.6",
