--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.7",
-    "@types/morgan": "^1.9.1",
     "bcrypt": "3.0.6",
     "body-parser": "1.18.3",
     "dotenv": "6.2.0",
-    "express": "4.16.4",
+    "express": "4.17.7",
     "jsonwebtoken": "8.5.0",
-    "mongoose": "5.4.18"
+    "mongoose": "5.9.26"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "4.17.7",
+    "@types/mongoose": "^5.7.34",
+    "@types/morgan": "^1.9.1",
     "cross-env": "^5.2.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
