--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,9 @@
     "noImplicitAny": false,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "target": "es6",
+    "allowSyntheticDefaultImports": true
   },
   "files": [
     "core.ts",
