--- a/package.json
+++ b/package.json
@@ -8,10 +8,29 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-server": "nest build",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/src/main"
   },
   "private": true,
   "dependencies": {
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.1",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-loader": "^6.2.1",
+    "ts-node": "9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4",
+    "@nestjs/platform-express": "^7.0.0",
+    "rimraf": "^3.0.2",
     "@angular/animations": "~10.0.5",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
@@ -21,8 +40,13 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@auth0/angular-jwt": "5.0.1",
+    "@grpc/proto-loader": "^0.5.5",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "grpc": "^1.24.3",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -32,9 +56,10 @@
     "@angular/cli": "~10.0.4",
     "@angular/compiler-cli": "~10.0.5",
     "@angular/language-service": "~10.0.5",
-    "@types/node": "^12.11.1",
+    "@nestjs/cli": "^7.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -44,7 +69,7 @@
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "9.0.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
   }
