--- a/package.json
+++ b/package.json
@@ -16,21 +16,6 @@
   },
   "private": true,
   "dependencies": {
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.9.1",
-    "@typescript-eslint/parser": "3.9.1",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-loader": "^6.2.1",
-    "ts-node": "9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4",
-    "@nestjs/platform-express": "^7.0.0",
-    "rimraf": "^3.0.2",
     "@angular/animations": "~10.0.5",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
@@ -43,12 +28,28 @@
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.4.4",
     "@nestjs/core": "^7.4.4",
+    "@nestjs/microservices": "^7.4.4",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.1",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.9.1",
+    "@typescript-eslint/parser": "3.9.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "grpc": "^1.24.3",
+    "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "rxjs": "~6.6.0",
+    "supertest": "^4.0.2",
+    "ts-loader": "^6.2.1",
+    "ts-node": "9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.0",
+    "typescript": "^3.7.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
