--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "mock": "ng serve -c mock",
-    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-server": "nest build",
+    "prebuild": "rimraf dist && mkdir dist",
+    "build": "ng build --prod && nest build",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main"
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
     "bootstrap": "^4.3.1",
+    "class-validator": "^0.12.2",
     "core-js": "^2.5.4",
     "grpc": "^1.24.3",
     "prettier": "^1.19.1",
