--- a/angular.json
+++ b/angular.json
@@ -106,9 +106,7 @@
             "polyfills": "apps/stackoverflow/src/polyfills.ts",
             "tsConfig": "apps/stackoverflow/tsconfig.spec.json",
             "karmaConfig": "apps/stackoverflow/karma.conf.js",
-            "styles": [
-              "apps/stackoverflow/src/styles.scss"
-            ],
+            "styles": ["apps/stackoverflow/src/styles.scss"],
             "scripts": [],
             "assets": [
               "apps/stackoverflow/src/favicon.ico",
@@ -123,9 +121,7 @@
               "apps/stackoverflow/tsconfig.app.json",
               "apps/stackoverflow/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -151,13 +147,69 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    },
+    "backend": {
+      "root": "apps/backend",
+      "sourceRoot": "apps/backend/src",
+      "projectType": "application",
+      "prefix": "backend",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "options": {
+            "outputPath": "dist/apps/backend",
+            "main": "apps/backend/src/main.ts",
+            "tsConfig": "apps/backend/tsconfig.app.json",
+            "assets": ["apps/backend/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/backend/src/environments/environment.ts",
+                  "with": "apps/backend/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "backend:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:lint",
+          "options": {
+            "linter": "eslint",
+            "tsConfig": [
+              "apps/backend/tsconfig.app.json",
+              "apps/backend/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/backend/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/backend/jest.config.js",
+            "passWithNoTests": true
           }
         }
       }
     }
   },
-  "defaultProject": "stackoverflow"
+  "defaultProject": "stackoverflow",
+  "cli": {
+    "defaultCollection": "@nrwl/nest"
+  }
 }
