feat() add microservice

--- a/package.json
+++ b/package.json
@@ -40,17 +40,18 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@auth0/angular-jwt": "5.0.1",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/microservices": "^7.4.4",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nrwl/angular": "10.2.1",
     "@nrwl/workspace": "^10.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "@nrwl/angular": "10.2.1",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "reflect-metadata": "^0.1.13"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
