--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dep-graph": "nx dep-graph",
     "workspace-schematic": "nx workspace-schematic",
     "help": "nx help",
-    "postinstall": "node ./decorate-angular-cli.js"
+    "postinstall": "node ./decorate-angular-cli.js",
+    "build:grpc:back": "node developtools/build-grpc-back.js"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@auth0/angular-jwt": "5.0.1",
+    "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/microservices": "^7.4.4",
@@ -48,10 +50,16 @@
     "@nrwl/workspace": "^10.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "grpc": "^1.24.3",
+    "protobufjs": "^6.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "app-root-path": "^2.2.1",
+    "fs-extra": "^8.0.1",
+    "glob": "^7.1.3",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
