--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "paths": {},
+    "paths": {
+      "@stackoverflow/back-proto": ["libs/back-proto/src/lib/*"]
+    },
     "baseUrl": ".",
     "downlevelIteration": true,
     "outDir": "./dist/out-tsc",
@@ -13,13 +15,8 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "rootDir": "."
   }
 }
