--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "jsonwebtoken": "8.5.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
@@ -97,6 +98,7 @@
     "@typescript-eslint/parser": "2.19.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.0.0"
+    "eslint-config-prettier": "6.0.0",
+    "@types/jsonwebtoken": "^8.5.0"
   }
 }
