--- a/package.json
+++ b/package.json
@@ -51,18 +51,20 @@
     "app-root-path": "^2.2.1",
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.3.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "core-js": "^2.5.4",
     "dotenv": "^8.2.0",
     "fs-extra": "^8.0.1",
     "glob": "^7.1.3",
+    "jsonwebtoken": "8.5.1",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^2.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
-    "zone.js": "~0.10.2",
-    "jsonwebtoken": "8.5.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.4",
