--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,15 @@ services:
     ports:
       - "3000:3000"
     links:
-      - mongo
+      - postgres
 
-  mongo:
-    container_name: mongo
-    image: mongo
+  postgres:
+    container_name: postgres
+    image: postgres
     volumes:
       - ./data:/data/db
     ports:
-      - "27017:27017"
+      - "5432:32771"
+    environment:
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: chat_db
