fix(): change host for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,6 @@ services:
     ports:
       - "5432:5432"
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: chat_db
