--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/forms": "~10.0.5",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
+    "@angular/animations": "12.2.16",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
     "@auth0/angular-jwt": "5.0.1",
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
-    "@nrwl/angular": "10.2.1",
+    "@nrwl/angular": "13.0.0",
     "@nrwl/workspace": "^10.2.1",
     "@types/bcrypt": "^3.0.0",
     "app-root-path": "^2.2.1",
@@ -54,7 +54,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "core-js": "^2.5.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "10.0.0",
     "fs-extra": "^8.0.1",
     "glob": "^7.1.3",
     "jsonwebtoken": "8.5.1",
@@ -64,43 +64,43 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
-    "zone.js": "~0.10.2"
+    "zone.js": "0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
-    "@angular/language-service": "~10.0.5",
-    "@nrwl/nest": "^10.2.1",
-    "@nrwl/workspace": "10.2.1",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "12.2.18",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
+    "@nrwl/nest": "13.0.0",
+    "@nrwl/workspace": "13.0.0",
+    "@types/jasmine": "3.6.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "2.0.4",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.7",
-    "@nrwl/jest": "10.2.1",
-    "jest": "26.2.2",
-    "@types/jest": "26.0.8",
-    "ts-jest": "26.1.4",
-    "@nrwl/node": "10.2.1",
+    "@types/node": "14.14.33",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "5.0.9",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "prettier": "2.7.1",
+    "protractor": "7.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.3.5",
+    "@nrwl/jest": "13.0.0",
+    "jest": "27.2.3",
+    "@types/jest": "27.0.2",
+    "ts-jest": "27.0.5",
+    "@nrwl/node": "13.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/eslint-plugin-nx": "10.2.1",
-    "@typescript-eslint/parser": "2.19.2",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.0.0",
+    "@nrwl/eslint-plugin-nx": "13.0.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.1.0",
     "@types/jsonwebtoken": "^8.5.0"
   }
 }
