--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.16",
-    "@angular/common": "12.2.16",
-    "@angular/compiler": "12.2.16",
-    "@angular/core": "12.2.16",
-    "@angular/forms": "12.2.16",
-    "@angular/platform-browser": "12.2.16",
-    "@angular/platform-browser-dynamic": "12.2.16",
-    "@angular/router": "12.2.16",
+    "@angular/animations": "13.3.11",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
     "@auth0/angular-jwt": "5.0.1",
     "@grpc/proto-loader": "^0.5.5",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
-    "@nrwl/angular": "13.0.0",
+    "@nrwl/angular": "13.10.6",
     "@nrwl/workspace": "^10.2.1",
     "@types/bcrypt": "^3.0.0",
     "app-root-path": "^2.2.1",
@@ -64,22 +64,23 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
-    "zone.js": "0.11.7"
+    "zone.js": "0.11.7",
+    "@storybook/core-server": "~6.4.12"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.18",
-    "@angular/cli": "12.2.18",
-    "@angular/compiler-cli": "12.2.16",
-    "@angular/language-service": "12.2.16",
-    "@nrwl/nest": "13.0.0",
-    "@nrwl/workspace": "13.0.0",
+    "@angular-devkit/build-angular": "13.3.9",
+    "@angular/cli": "13.3.9",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "13.3.11",
+    "@nrwl/nest": "13.10.6",
+    "@nrwl/workspace": "13.10.6",
     "@types/jasmine": "3.6.11",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "14.14.33",
     "codelyzer": "6.0.2",
-    "jasmine-core": "3.6.0",
+    "jasmine-core": "3.10.1",
     "jasmine-spec-reporter": "5.0.2",
-    "karma": "5.0.9",
+    "karma": "6.3.20",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.2",
@@ -88,18 +89,18 @@
     "protractor": "7.0.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5",
-    "@nrwl/jest": "13.0.0",
+    "typescript": "4.6.4",
+    "@nrwl/jest": "13.10.6",
     "jest": "27.2.3",
     "@types/jest": "27.0.2",
     "ts-jest": "27.0.5",
-    "@nrwl/node": "13.0.0",
+    "@nrwl/node": "13.10.6",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/eslint-plugin-nx": "13.0.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "eslint": "7.32.0",
+    "@nrwl/eslint-plugin-nx": "13.10.6",
+    "@typescript-eslint/parser": "5.18.0",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
     "@types/jsonwebtoken": "^8.5.0"
   }
